--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -28,6 +28,12 @@
             android:name=".LoginActivity"
             android:label="@string/loginPage" />
         <activity android:name=".HomeActivity">
+
+        </activity>
+
+        <activity
+            android:name=".MainHomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
