--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.it2.axpresslogisticapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher24s"
@@ -27,7 +29,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/loginPage" />
-        <activity android:name=".HomeActivity">
+        <activity android:name=".OperationActivity">
 
         </activity>
 
