--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher24s"
@@ -43,10 +42,16 @@
             android:label="@string/docket_enquiry" />
         <activity
             android:name=".acitvities.HrmsActivity"
-            android:label="@string/hrms">
-            >
-        </activity>
-        <activity android:name=".acitvities.MarkAttendanceActivity"></activity>
+            android:label="@string/hrms"></activity>
+        <activity
+            android:name=".acitvities.MarkAttendanceActivity"
+            android:label="@string/mark_attendance" />
+        <activity
+            android:name=".acitvities.AttendanceSummaryActivity"
+            android:label="@string/attendance_summary" />
+        <activity
+            android:name=".acitvities.LeaveInfoActivity"
+            android:label="@string/leave_info"></activity>
     </application>
 
 </manifest>
