--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
 
 }
 apply plugin: 'com.google.gms.google-services'
-
