--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,11 +113,11 @@
 
         <activity
             android:name=".ScannedDataActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".acitvities.CRMActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".CameraActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CameraActivity" />
         <!--
             <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
