--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.0'
     //circular image view library...
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
