--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,24 +35,24 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.volley:volley:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.github.traex.rippleeffect:library:1.3'
+//    implementation 'com.squareup.picasso:picasso:2.5.2'
+//    implementation 'com.github.traex.rippleeffect:library:1.3'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.2'
+//    implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
-    implementation 'com.karumi:dexter:4.2.0'
+//    implementation 'com.karumi:dexter:4.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
-    //text recognition libraries
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
+//    //text recognition libraries
+//    implementation 'com.google.firebase:firebase-core:16.0.1'
+//    implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-vision:15.0.2'
-    implementation 'com.rmtheis:tess-two:6.2.0'
-    //crop image library...
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.0'
+//    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+//    implementation 'com.rmtheis:tess-two:6.2.0'
+//    //crop image library...
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.0'
     //circular image view library...
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
