--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.axpresslogistic.it2.axpresslogisticapp">
+    package="com.axpresslogistics.it2.axpresslogisticapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -81,7 +81,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="@string/google_maps_keyReleased" />
 
         <activity
             android:name=".acitvities.MapsActivity"
@@ -121,8 +121,12 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".acitvities.InvoiceDocketActivityList"
+        <activity
+            android:name=".acitvities.InvoiceDocketActivityList"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".Card">
 
         </activity>
     </application>
