--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.axpresslogistics.it2.axpresslogisticapp"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 4
-        versionName "2.1.1"
+        versionCode 5
+        versionName "2.2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -56,6 +56,7 @@ dependencies {
     //circular image view library...
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+    implementation "com.android.support:support-compat:27.1.1"
 
 }
 apply plugin: 'com.google.gms.google-services'
