--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation "com.android.support:support-compat:27.1.1"
+    implementation 'org.jsoup:jsoup:1.10.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
